--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,12 @@
               "src/assets/css/grid.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": [],
+            "scripts": [
+                "node_modules/jquery/dist/jquery.slim.min.js",
+                "node_modules/popper.js/dist/umd/popper.min.js",
+                "node_modules/bootstrap/dist/js/bootstrap.min.js",
+                "src/assets/js/filter.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
