--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
+    "ng5-slider": "^1.1.14",
     "ngx-cookie-service": "^2.1.0",
     "popper": "^1.0.1",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
