--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.4.1",
     "ng5-slider": "^1.1.14",
     "ngx-cookie-service": "^2.1.0",
+    "ngx-pagination": "^3.2.1",
     "popper": "^1.0.1",
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
